--- a/sass/modules/_about-us.scss
+++ b/sass/modules/_about-us.scss
@@ -17,20 +17,10 @@
     @media screen and (min-width: "1200px") {
       border-radius: 14px;
     }
-    &.style-two {
-      position: relative;
-      width: 250px;
-      height: 562px;
-      background: url("/images/about-us-main-2.png");
-      background-position: center;
-      background-repeat: no-repeat;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
   }
   .topper-img {
     display: none;
+
     .video-btn {
       position: absolute;
       width: 70px;
@@ -64,14 +54,52 @@
         align-items: center;
         justify-content: center;
       }
+    }
+    @media screen and (min-width: 1200px) {
+      position: absolute;
+      bottom: -60px;
+      right: -70px;
+      z-index: 1;
+      display: block;
+    }
+  }
+  &.style-two {
+    position: relative;
+    .main-img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 250px;
+      height: 562px;
+      @media screen and (min-width: 767px) {
+        background: url("/images/about-us-main-2.png");
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+    }
+    // topper-image style-two
+    .topper-img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      & img {
+        border-radius: 14px;
+        @media screen and (min-width: 767px) {
+          border-radius: 50%;
+        }
+      }
       // video-btn style-two
-      &.style-two {
+      .video-btn {
         position: absolute;
         width: 70px;
         height: 70px;
-        top: 45%;
+        top: 44%;
         bottom: 50%;
-        left: 45%;
+        left: 42%;
         background: $text-primary;
         z-index: 2;
         border-radius: 100%;
@@ -84,23 +112,6 @@
           color: $white;
         }
       }
-    }
-    @media screen and (min-width: "1200px") {
-      position: absolute;
-      bottom: -60px;
-      right: -70px;
-      z-index: 1;
-      display: block;
-    }
-    // topper-image style-two
-    &.style-two {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
   }
 }
