--- a/sass/modules/_articles.scss
+++ b/sass/modules/_articles.scss
@@ -15,11 +15,6 @@
       line-height: 21px;
       text-transform: uppercase;
       color: $secondary-color;
-      &.style-two {
-        top: 20px;
-        left: 20px;
-        bottom: auto;
-      }
     }
   }
   .content-wrapper {
@@ -43,24 +38,33 @@
         text-transform: capitalize;
         color: $text-primary;
       }
-      // author meta
-      &.style-two {
-        margin-bottom: 25px;
-      }
-    }
-    &.style-two {
-      margin: -50px 20px 20px 20px;
-      background: white;
-      position: relative;
-      z-index: 1;
-      border-radius: 14px;
     }
   }
   &.style-two {
     background: transparent;
     border-radius: 14px 14px 0px 0px;
+    .image {
+      .article-btn {
+        top: 20px;
+        left: 20px;
+        bottom: auto;
+      }
+    }
     img {
       width: 100%;
+    }
+    .content-wrapper {
+      margin: 0;
+      background: white;
+      position: relative;
+      z-index: 1;
+      border-radius: 14px;
+      .post-author-meta {
+        margin-bottom: 25px;
+      }
+      @media screen and (min-width: 767px) {
+        margin: -50px 20px 20px 20px;
+      }
     }
   }
 }
